@@ -113,6 +113,7 @@ debci (0.6) UNRELEASED; urgency=medium
   * public/font-awesome, debian/copyright: embedding a copy of FontAwesome,
     which is, erm, awesome.
   * public/app.js: add a link to the per-package Atom feed
+  * public/style.css: make the status indicators use FontAwesome icons
 
  -- Martin Pitt <mpitt@debian.org>  Sat, 05 Apr 2014 12:18:39 +0100
 
